--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
 </head>
-<body class="bg-nordgray-1 text-white">
-  <div class="container-fluid ">
+<body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Tridentu Linux</a>
@@ -30,13 +29,13 @@
       </div>
     </div>
   </nav>
+ <header class="header">
 
+	</header>
     <div class="container">
       <div class="content">
         {{ content }}
       </div>
-    </div><!-- /.container -->
-  </div>
-  
+    </div><!-- /.container -->  
 </body>
 </html>
