--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,9 +29,11 @@
       </div>
     </div>
   </nav>
- <header class="header">
-
-	</header>
+ <header class="header header-fixed u-unselectable header-animated">
+   <div class="header-brand">
+	   
+</div>
+</header>
     <div class="container">
       <div class="content">
         {{ content }}
