--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,9 @@
   </nav>
  <header class="header header-fixed u-unselectable header-animated">
    <div class="header-brand">
-	   
+	   <div class="nav-item no-hover">
+		   <a><h6 class="title">Tridentu Linux</h6></a>
+	   </div>
 </div>
 </header>
     <div class="container">
