--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,6 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Tridentu Linux</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
 	<span class="navbar-toggler-icon"></span>
       </button>
@@ -33,6 +32,11 @@
    <div class="header-brand">
 	   <div class="nav-item no-hover">
 		   <a><h6 class="title">Tridentu Linux</h6></a>
+	   </div>
+	   <div class="nav-item nav-btn">
+		   <span></span>
+		   <span></span>
+		   <span></span>
 	   </div>
 </div>
 </header>
