--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,12 +33,18 @@
 	   <div class="nav-item no-hover">
 		   <a><h6 class="title">Tridentu Linux</h6></a>
 	   </div>
+	   <div class="nav-item">
+		   <a href="/">
+			   <i class="fab fa-wrapper fa-home"></i>
+		   </a>
+	   </div>
 	   <div class="nav-item nav-btn">
 		   <span></span>
 		   <span></span>
 		   <span></span>
 	   </div>
 </div>
+	 
 </header>
     <div class="container">
       <div class="content">
