--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,6 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav">
 	  <li class="navbar-item">
-	    <a class="nav-link active" href="/">Home</a>
-	  </li>
-	  <li class="navbar-item">
 	    <a href="/features" class="nav-link">Features</a>
 	  </li>
 	  </ul>
@@ -35,7 +32,7 @@
 	   </div>
 	   <div class="nav-item">
 		   <a href="/">
-			   <i class="fab fa-wrapper fa-home"></i>
+			   <i class="fab fa-wrapper fa-github"></i>
 		   </a>
 	   </div>
 	   <div class="nav-item nav-btn">
