--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 	   </div>
 	   <div class="nav-item">
 		   <a href="/">
-			   <i class="fab fa-wrapper fa-github"></i>
+			   <i class="fab fa-wrapper fa-home"></i>
 		   </a>
 	   </div>
 	   <div class="nav-item nav-btn">
