--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,9 @@
 	   </div>
 	   <div class="nav-item">
 		   <a href="/">
+			   <span class="icon">
 			   <i class="fab fa-wrapper fa-home"></i>
+			   </span>
 		   </a>
 	   </div>
 	   <div class="nav-item nav-btn">
