--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 			   </span>
 		   </a>
 	   </div>
-	   <div class="nav-item nav-btn">
+	   <div class="nav-item nav-btn" id="header-btn">
 		   <span></span>
 		   <span></span>
 		   <span></span>
