--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,20 +11,6 @@
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
-	<span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-	  <li class="navbar-item">
-	    <a href="/features" class="nav-link">Features</a>
-	  </li>
-	  </ul>
-      </div>
-    </div>
-  </nav>
  <header class="header header-fixed u-unselectable header-animated">
    <div class="header-brand">
 	   <div class="nav-item no-hover">
@@ -33,6 +19,11 @@
 	   <div class="nav-item">
 		   <a href="/">
 			Home
+		   </a>
+	   </div>
+	   <div class="nav-item">
+		   <a href="/features">
+			Features
 		   </a>
 	   </div>
 	   <div class="nav-item nav-btn" id="header-btn">
