--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,11 @@
 
    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.2/dist/cirrus.min.css" >
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
+	<style type="text/css">
+		.header {
+			background-color: #eceff4;	
+		}
+	</style>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
 </head>
