--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 	<style type="text/css">
 		.header {
 			background-color: #eceff4;	
+			color: #2e3440;
 		}
 	</style>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
