--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
 	 
 </header>
     <div class="row">
-      <div class="content">
+      <div class="col-12">
         {{ content }}
       </div>
     </div><!-- /.container -->  
