--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
 			background-color: #eceff4;	
 			color: #2e3440;
 		}
+		#splash-img {
+			background-image: url("images/mountain.jpg");	
+		}
 	</style>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
