--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
 		#splash-img {
 			background-image: url("images/mountain.jpg");	
 		}
+		.white {
+			color: #eceff4;
+		}
 	</style>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
