--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
       </div>
     </div><!-- /.container -->  
 	<footer class="footer">
-	
+		<h3 class="footer__title">TRIDENTU</h3>
 	</footer>
 </body>
 </html>
