--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,9 @@
 		.white {
 			color: #eceff4;
 		}
+		.footer {  
+		`	background-color: #2e3440;	
+		}
 	</style>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
@@ -52,7 +55,7 @@
       </div>
     </div><!-- /.container -->  
 	<footer class="footer">
-		<h3 class="footer__title">TRIDENTU</h3>
+		<h3 class="footer__title uppercase white">Tridentu</h3>
 	</footer>
 </body>
 </html>
