--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,6 +56,9 @@
     </div><!-- /.container -->  
 	<footer class="footer">
 		<h3 class="footer__title uppercase white">Tridentu</h3>
+		<div class="content">
+			
+		</div>
 	</footer>
 </body>
 </html>
