--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,6 +57,12 @@
 	<footer class="footer">
 		<h3 class="footer__title uppercase white">Tridentu</h3>
 		<div class="content">
+			<div class="divider"></div>
+			<div class="row">
+				<div class="col-4">
+					
+				</div>
+			</div>
 			
 		</div>
 	</footer>
