--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,11 @@
 			<div class="divider"></div>
 			<div class="row">
 				<div class="col-4">
-					
+					<ul class="no-bullets">
+						<a href="/">
+							<li class="footer__list-item">Home</li>
+						</a>
+					</ul>
 				</div>
 			</div>
 			
