--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
 		.footer {  
 		`	background-color: #2e3440;	
 		}
+		.frame {
+			background-color: #d8dee9;
+		}
 	</style>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
