Tridentu Logo added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
  <header class="header header-fixed u-unselectable header-animated">
    <div class="header-brand">
 	   <div class="nav-item no-hover">
+	       <img src="images/tridentur.svg"/>
 		   <a><h6 class="title">Tridentu Linux</h6></a>
 	   </div>
 	   <div class="nav-item">
@@ -72,7 +73,7 @@
 			</div>
 			
 		</div>
-		<p class="subtitle">Copyright (C) 2021</p>
+		<p class="subtitle">Copyright (C) 2022</p>
 	</footer>
 </body>
 </html>
