--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
  <header class="header header-fixed u-unselectable header-animated">
    <div class="header-brand">
 	   <div class="nav-item no-hover">
-	       <img src="images/tridentur.svg" width="24" height="24/>
+	       <img src="images/tridentur.svg" width="32" height="32" />
 		   <a><h6 class="title">Tridentu Linux</h6></a>
 	   </div>
 	   <div class="nav-item">
