--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,12 @@
 						<a href="/">
 							<li class="footer__list-item">Home</li>
 						</a>
+						<a href="/features">
+							<li class="footer__list-item">Features</li>
+						</a>
+						<a href="/tridentu-wiki">
+							<li class="footer__list-item">Wiki</li>
+						</a>
 					</ul>
 				</div>
 			</div>
