--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,11 @@
 			Features
 		   </a>
 	   </div>
+	   <div class="nav-item">
+		   <a href="/tridentu-wiki">
+			Wiki
+		   </a>
+	   </div>
 	   <div class="nav-item nav-btn" id="header-btn">
 		   <span></span>
 		   <span></span>
