--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,6 +81,13 @@
 						</a>
 					</ul>
 				</div>
+				<div class="col-4">
+					<ul class="no-bullets">
+						<a href="https://github.com/Tridentu/tridentu/issues">
+							<li class="footer__list-item">Issue Tracker</li>
+						</a>
+
+				</div>
 			</div>
 			
 		</div>
