Added Viewport tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
    <title>{{ page.title }} - {{ site.title }}</title>
 
    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.2/dist/cirrus.min.css" >
+   <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
 	<style type="text/css">
 		.header {
