--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,28 +5,11 @@
    <meta charset="utf-8">
    <title>{{ page.title }} - {{ site.title }}</title>
 
-   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.2/dist/cirrus.min.css" >
+   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.3/dist/cirrus.min.css" >
    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
    <meta name="theme-color" content="#eceff4">
-	<style type="text/css">
-		.header {
-			background-color: #eceff4;	
-			color: #2e3440;
-		}
-		#splash-img {
-			background-image: url("images/mountain.jpg");	
-		}
-		.white {
-			color: #eceff4;
-		}
-		.footer {  
-		`	background-color: #2e3440;	
-		}
-		.frame {
-			background-color: #d8dee9;
-		}
-	</style>
+	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
 </head>
