--- a/css/tridentu-styles.css
+++ b/css/tridentu-styles.css
@@ -3,7 +3,7 @@
 			color: #2e3440;
 		}
 		#splash-img {
-			background-image: url("/images/mountain.jpg");
+			background-image: url("../images/mountain.jpg");
 		}
 		.white {
 			color: #eceff4;
