--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.3/dist/cirrus.min.css" >
    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
-   <meta name="theme-color" content="#eceff4">
+   <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
+      <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2e3440">
+
 	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
