--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
  <header class="header header-fixed u-unselectable header-animated">
    <div class="header-brand">
 	   <div class="nav-item no-hover">
-	       <img src="images/tridentur.svg" width="32" height="32" />
+	       <img src="/images/tridentur.svg" width="32" height="32" />
 		   <a><h6 class="title">Tridentu Linux</h6></a>
 	   </div>
 	   <div class="nav-item">
@@ -35,6 +35,11 @@
 	   </div>
 	   <div class="nav-item">
 		   <a href="/tridentu-wiki">
+			Wiki
+		   </a>
+	   </div>
+	   div class="nav-item">
+		   <a href="/changelogs">
 			Wiki
 		   </a>
 	   </div>
