--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
 			Wiki
 		   </a>
 	   </div>
-	   div class="nav-item">
+	   <div class="nav-item">
 		   <a href="/changelogs">
-			Wiki
+			Release Notes
 		   </a>
 	   </div>
 	   <div class="nav-item nav-btn" id="header-btn">
