Added Service Worker

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,5 +86,13 @@
 		</div>
 		<p class="subtitle">Copyright (C) 2022</p>
 	</footer>
+	<script>
+		if ('serviceWorker' in navigator) {
+			// Use the window load event to keep the page load performant
+			window.addEventListener('load', () => {
+				navigator.serviceWorker.register('/sw.js');
+			});
+		}
+	</script>
 </body>
 </html>
