--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="{{ site.path }}/js/bootstrap.min.js"></script>
-	<link rel="manifest" href="/manifest.json">
+	<link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
  <header class="header header-fixed u-unselectable header-animated">
