Updated feature style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <title>{{ page.title }} - {{ site.title }}</title>
 
-   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui@0.6.3/dist/cirrus.min.css" >
+   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css" >
    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
