--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 </div>
 	 
 </header>
-<div class="row"></div>
+<div class="row h-20p"></div>
     <div class="row">
       <div class="col-12">
         {{ content }}
