--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
    <meta charset="utf-8">
    <title>{{ page.title }} - {{ site.title }}</title>
 
-   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cirrus-ui/dist/cirrus.min.css" >
+   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" >
    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
@@ -13,78 +13,71 @@
 
 	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-   <script src="{{ site.path }}/js/bootstrap.min.js"></script>
+   <script src="/js/bootstrap.bundle.min.js"></script>
 	<link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
- <header class="header header-fixed u-unselectable header-animated">
-   <div class="header-brand">
-	   <div class="nav-item no-hover">
+ <nav class="nav navbar-expand ">
+   <div class="container-fluid">
+	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
-		   <a><h6 class="title">Tridentu Linux</h6></a>
-	   </div>
-	   <div class="nav-item">
-		   <a href="/">
-			Home
-		   </a>
-	   </div>
-	   <div class="nav-item">
-		   <a href="/features">
-			Features
-		   </a>
-	   </div>
-	   <div class="nav-item">
-		   <a href="/tridentu-wiki">
-			Wiki
-		   </a>
-	   </div>
-	   <div class="nav-item">
-		   <a href="/changelogs">
-			Release Notes
-		   </a>
-	   </div>
-	   <div class="nav-item nav-btn" id="header-btn">
-		   <span></span>
-		   <span></span>
-		   <span></span>
+		   <h6 class="title">Tridentu Linux</h6>
+	   </a>
+	   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			<li class="nav-item">
+				<a href="/">
+					Home
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/features">
+					Features
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/tridentu-wiki">
+					Wiki
+				</a>
+			</li>
+			<li class="nav-item">
+				<a href="/changelogs">
+					Release Notes
+				</a>
+			</li>
 	   </div>
 </div>
 	 
-</header>
-    <div class="row">
-      <div class="col-12">
-        {{ content }}
-      </div>
-    </div><!-- /.container -->  
-	<footer class="footer">
-		<h3 class="footer__title uppercase white">Tridentu</h3>
-		<div class="content">
-			<div class="divider"></div>
-			<div class="row">
-				<div class="col-4">
-					<ul class="no-bullets">
-						<a href="/">
-							<li class="footer__list-item">Home</li>
-						</a>
-						<a href="/features">
-							<li class="footer__list-item">Features</li>
-						</a>
-						<a href="/tridentu-wiki">
-							<li class="footer__list-item">Wiki</li>
-						</a>
-					</ul>
-				</div>
-				<div class="col-4">
-					<ul class="no-bullets">
-						<a href="https://github.com/Tridentu/tridentu/issues">
-							<li class="footer__list-item">Issue Tracker</li>
-						</a>
+</nav>
 
-				</div>
+
+	<div class="container-fluid">
+        {{ content }}
+    </div><!-- /.container -->  
+
+	<footer class="py-5">
+			<div class="row">
+			<div class="col-4 col-md-2 mb-3">
+				<h5>Section</h5>
+				<ul class="nav flex-column">
+				<li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-body-secondary">Home</a></li>
+				<li class="nav-item mb-2"><a href="/features" class="nav-link p-0 text-body-secondary">Features</a></li>
+				<li class="nav-item mb-2"><a href="/changelogs" class="nav-link p-0 text-body-secondary">Changelog</a></li>
+				<li class="nav-item mb-2"><a href="https://github.com/Tridentu/tridentu2/issues" class="nav-link p-0 text-body-secondary">Issue Tracker</a></li>
 			</div>
-			
 		</div>
-		<p class="subtitle">Copyright (C) 2022</p>
+
+		 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+				<p>Copyright (C) 2022</p>
+				<ul class="list-unstyled d-flex">
+					<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+					<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+				</ul>
+		</div>
 	</footer>
 	<script>
 		if ('serviceWorker' in navigator) {
