--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 	<link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
- <nav class="nav navbar-expand ">
+ <nav class="nav navbar-expand-lg ">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
