--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
-		   <h6 class="title">Tridentu Linux</h6>
+		   <span class="title">Tridentu Linux</span>
 	   </a>
 	   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
