--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 	<link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
+<header class="p-3 text-bg-light">
  <nav class="nav navbar-expand-lg ">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
@@ -51,9 +52,8 @@
 			</ul>
 	   </div>
 </div>
-	 
 </nav>
-
+</header>
 
 	<div class="container-fluid">
         {{ content }}
