--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header class="p-3 text-bg-light">
- <nav class="nav navbar-expand-lg ">
+ <nav class="navbar navbar-expand-lg ">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
