--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
 	<link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
-<header class="p-3 text-bg-light">
- <nav class="navbar navbar-expand-lg ">
+<header class="text-bg-light">
+ <nav class="navbar navbar-expand">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
@@ -51,11 +51,11 @@
 			</li>
 			</ul>
 	   </div>
-</div>
-</nav>
+	 </div>
+	</nav>
 </header>
 
-	<div class="container-fluid">
+	<div class="container">
         {{ content }}
     </div><!-- /.container -->  
 
