--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,22 +30,22 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 			<li class="nav-item">
-				<a href="/">
+				<a class="nav-link" href="/">
 					Home
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="/features">
+				<a class="nav-link" href="/features">
 					Features
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="/tridentu-wiki">
+				<a class="nav-link" href="/tridentu-wiki">
 					Wiki
 				</a>
 			</li>
 			<li class="nav-item">
-				<a href="/changelogs">
+				<a class="nav-link" href="/changelogs">
 					Release Notes
 				</a>
 			</li>
