--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,16 +59,14 @@
         {{ content }}
     </div><!-- /.container -->  
 
-	<footer class="py-5">
-			<div class="row">
-			<div class="col-4 col-md-2 mb-3">
-				<h5>Section</h5>
-				<ul class="nav flex-column">
+	<footer class="py-3 my-4">
+		<div class="row">
+			<ul class="class="nav justify-content-center border-bottom pb-3 mb-3"">
 				<li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-body-secondary">Home</a></li>
 				<li class="nav-item mb-2"><a href="/features" class="nav-link p-0 text-body-secondary">Features</a></li>
 				<li class="nav-item mb-2"><a href="/changelogs" class="nav-link p-0 text-body-secondary">Changelog</a></li>
 				<li class="nav-item mb-2"><a href="https://github.com/Tridentu/tridentu2/issues" class="nav-link p-0 text-body-secondary">Issue Tracker</a></li>
-			</div>
+			</ul>
 		</div>
 
 		 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
