--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
 
 	<footer class="py-3 my-4">
 		<div class="row">
-			<ul class="class="nav justify-content-center border-bottom pb-3 mb-3"">
+			<ul class="nav justify-content-center border-bottom pb-3 mb-3">
 				<li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-body-secondary">Home</a></li>
 				<li class="nav-item mb-2"><a href="/features" class="nav-link p-0 text-body-secondary">Features</a></li>
 				<li class="nav-item mb-2"><a href="/changelogs" class="nav-link p-0 text-body-secondary">Changelog</a></li>
