--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header class="text-bg-light">
- <nav class="navbar navbar-expand">
+ <nav class="navbar fixed-top navbar-expand">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
@@ -62,20 +62,15 @@
 	<footer class="py-3 my-4">
 		<div class="row">
 			<ul class="nav justify-content-center border-bottom pb-3 mb-3">
-				<li class="nav-item mb-2"><a href="/" class="nav-link p-0 text-body-secondary">Home</a></li>
-				<li class="nav-item mb-2"><a href="/features" class="nav-link p-0 text-body-secondary">Features</a></li>
-				<li class="nav-item mb-2"><a href="/changelogs" class="nav-link p-0 text-body-secondary">Changelog</a></li>
-				<li class="nav-item mb-2"><a href="https://github.com/Tridentu/tridentu2/issues" class="nav-link p-0 text-body-secondary">Issue Tracker</a></li>
+				<li class="nav-item mb-2"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
+				<li class="nav-item mb-2"><a href="/features" class="nav-link px-2 text-body-secondary">Features</a></li>
+				<li class="nav-item mb-2"><a href="/changelogs" class="nav-link px-2 text-body-secondary">Changelog</a></li>
+				<li class="nav-item mb-2"><a href="https://github.com/Tridentu/tridentu2/issues" class="nav-link px-2 text-body-secondary">Issue Tracker</a></li>
 			</ul>
 		</div>
 
 		 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
 				<p>Copyright (C) 2022</p>
-				<ul class="list-unstyled d-flex">
-					<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-					<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-					<li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-				</ul>
 		</div>
 	</footer>
 	<script>
