--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
 	<link rel="manifest" href="/manifest.webmanifest">
 </head>
 <body>
-<header class="text-bg-light">
- <nav class="navbar fixed-top navbar-expand">
+<header class="text-bg-light bg-light">
+ <nav class="navbar sticky-top navbar-expand">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
