--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header class="text-bg-light bg-light">
- <nav class="navbar fixed-top navbar-expand" data-bs-theme="light">
+ <nav class="navbar navbar-expand" data-bs-theme="light">
    <div class="container-fluid">
 	   <a class="navbar-brand" href="{{ site.path }}">
 	       <img src="/images/tridentur.svg" width="32" height="32" />
