--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,10 +68,7 @@
 				<li class="nav-item mb-2"><a href="https://github.com/Tridentu/tridentu2/issues" class="nav-link px-2 text-body-secondary">Issue Tracker</a></li>
 			</ul>
 		</div>
-
-		 <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-				<p>Copyright (C) 2022</p>
-		</div>
+		<p class="text-center text-body-secondary">Copyright (C) 2022</p>
 	</footer>
 	<script>
 		if ('serviceWorker' in navigator) {
