--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
-      <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2e3440">
-
+   <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2e3440">
+   <meta name="color-scheme" content="light dark">
 	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="/js/bootstrap.bundle.min.js"></script>
