--- a/css/tridentu-styles.css
+++ b/css/tridentu-styles.css
@@ -1,6 +1,8 @@
 		:root {
 			 --bs-body-color: #2e3440;
 			 --bs-body-bg: #eceff4;
+			 --bs-secondary-color: #3b4252;
+			 --bs-secondary-bg: #d8dee9;
 			 --bs-tertiary-bg: #e5e9f0;
 		}
 
