--- a/css/tridentu-styles.css
+++ b/css/tridentu-styles.css
@@ -6,7 +6,7 @@
 			 --bs-tertiary-bg: #e5e9f0;
 			 --bs-primary: #5e81ac;
 			 --bs-dark: #2e3440;
-			 --bs-btn-color: var(--bs-primary);
+			 --bs-btn-bg: var(--bs-primary);
 		}
 
 		.header {
