--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2e3440">
    <meta name="color-scheme" content="light dark">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/fantasque-sans-mono" type="text/css"/>
 	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
+
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="/js/bootstrap.bundle.min.js"></script>
 	<link rel="manifest" href="/manifest.webmanifest">
