--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,9 @@
    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2e3440">
    <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/fantasque-sans-mono" type="text/css"/>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/tridentu-styles.css"/>
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
