--- a/css/tridentu-styles.css
+++ b/css/tridentu-styles.css
@@ -1,3 +1,4 @@
+		@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 		:root {
 			 --bs-body-color: #2e3440;
 			 --bs-body-bg: #eceff4;
@@ -7,7 +8,7 @@
 			 --bs-primary: #5e81ac;
 			 --bs-dark: #2e3440;
 			 --bs-btn-bg: #5e81ac;
-			 --bs-body-font-family: "Fantasque Sans Mono";
+			 --bs-body-font-family: "Fantasque Sans Mono", Montserrat;
 		}
 
 		.header {
