--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
    <title>{{ page.title }} - {{ site.title }}</title>
 
    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" >
-   <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no">
+   <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
    <link rel="stylesheet" href="fonts/fontawesome-free-5.15.4-web/css/all.min.css"/>
    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#eceff4">
    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#2e3440">
@@ -19,6 +19,8 @@
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
    <script src="/js/bootstrap.bundle.min.js"></script>
 	<link rel="manifest" href="/manifest.webmanifest">
+<script async src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
+<link rel="icon" type="image/png" href="/images/icons/icon-48x48.png" sizes="48x48" />
 </head>
 <body>
 <header class="text-bg-light bg-light">
